Finalisation du rapport

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -124,7 +124,7 @@ Ce problème peut avoir, à notre avis, deux causes possibles:
 \end{enumerate}
 
 Après de nombreux essais et de nombreuses modification, aussi bien de nos modèles que de nos formules LTL, nous ne sommes pas parvenus à générer une solution optimale du jeu du solitaire.
-Nous avons par conséquent décidés de vous proposer un fichier "Proof of Concept", dans lequel pan cherche une exécution pour laquelle le nombre de bille finale est égal à 32, afin de démontrer la viabilité de notre approche. La preuve de concept se trouve dans le répertoire sources/solitaire/proof_of_concept/.
+Nous avons par conséquent décidés de vous proposer un fichier "Proof of Concept", dans lequel pan cherche une exécution pour laquelle le nombre de bille finale est égal à 32, afin de démontrer la viabilité de notre approche. La preuve de concept se trouve dans le répertoire sources/solitaire/proof\_of\_concept/.
 
 \subsection{Gestion d'autres plateaux}
 
